

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-May-2010 Christophe Demko
$ Change a string in com_languages

05-May-2010 Jean-Marie Simonet
$ Adding delete strings and code to Menu type deleting.

05-May-2010 Andrew Eddie
 ^ Renamed "installer" plugin group to "extension".
 ^ Added onExtensionBeforeSave and onExtensionAfterSave events to languages, modules, plugins, template styles and source.
 ^ Merged language switcher branch (Jean-Marie Simonet & Christophe Demko).
 # Fixed bugs in flash uploader (Ian MacLennan is da man!).
 + Added stanard support for onContentBeforeDelete, onContentAfterDelete and onContentChangeState events in JModelAdmin.

04-May-2010 Jean-Marie Simonet
$ Refactored ini files structure for test alphas
$ ^ A few fixes for Hathor
# Bug fixes

04-May-2010 Andrew Eddie
 ^ Merge patched to cache the query building in JModelList (Christophe Demko).
 + Merge Hathor administrator template by Andrea Tarr.
 # Fixed [#20319] beez2 overides
 ^ Merge patch [#20330] mod_status show / hide params (Phil Snell).
 ^ Added chaining support to JMail.
 ^ Renamed extension events to onExtension*
 ^ Renamed search events to onContentSearch*
 ^ Simplified JForm email and username rules.
 ^ Fix some installation controller problems.
 ^ Rename authentication events to onUserAuthenticate.
 ^ Rename user events to onUser*.
 ^ Add better form and data handling support to JModelForm.
 # Fix issue with forms and profile in frontend com_users.
 # Fix issue with forms and profile in backend com_users.
 ^ Renamed onPrepareContent event to onContentPrepare.
 ^ Renamed onBeforeContentSave and onAfterContentSave events to onContentBeforeSave and onContentAfterSave.