@@ -22,8 +22,6 @@ require_once dirname(__FILE__) . '/extension.php';
  */
 class InstallerModelManage extends InstallerModel
 {
-	protected $_context = 'com_installer.manage';
-
 	/**
 	 * Method to auto-populate the model state.
 	 *
@@ -44,8 +42,8 @@ class InstallerModelManage extends InstallerModel
 			$app->setUserState($this->context.'.data', array('filters'=>$filters));
 		}
 
-		$this->setState($this->_context.'.message',$app->getUserState('com_installer.message'));
-		$this->setState($this->_context.'.extension_message',$app->getUserState('com_installer.extension_message'));
+		$this->setState($this->context.'.message',$app->getUserState('com_installer.message'));
+		$this->setState($this->context.'.extension_message',$app->getUserState('com_installer.extension_message'));
 		$app->setUserState('com_installer.message','');
 		$app->setUserState('com_installer.extension_message','');
 
@@ -253,7 +251,7 @@ class InstallerModelManage extends InstallerModel
 		$app = JFactory::getApplication();
 		JForm::addFormPath(JPATH_COMPONENT . '/models/forms');
 		JForm::addFieldPath(JPATH_COMPONENT . '/models/fields');
-		$form = JForm::getInstance('com_installer.manage', 'manage', array('control' => 'filters', 'event' => 'onPrepareForm'));
+		$form = JForm::getInstance('com_installer.manage', 'manage', array('event' => 'onPrepareForm'));
 
 		// Check for an error.
 		if ($form == false) {
@@ -261,6 +259,7 @@ class InstallerModelManage extends InstallerModel
 			return false;
 		}
 		// Check the session for previously entered form data.
+		$data = $this->getFormData();
 
 		// Bind the form data if present.
 		if (!empty($data)) {
