@@ -28,6 +28,7 @@ $ -> Language fix or change
 ! -> Note
 
 05-May-2010 Christophe Demko
+# Correcting a bug in the com_installer manage view
 $ Change a string in com_languages
 
 05-May-2010 Jean-Marie Simonet
